# Case-Study

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
case_study/: __init__.py  __main__.py  analytics.py  cases.py  cli.py  coach.py  engine.py  mental_math.py  session.py  validation.py
cases/: sample_cases.json
data/: frameworks.json  sample_cases.json
docs/: cost_estimate.md
sessions/: bank_growth_001_2026-03-12_13-38-16.json
tests/: test_cases.py  test_cli.py  test_coach.py  test_engine.py  test_frameworks.py  test_session.py  test_validation.py
