[project]
name = "case-study"
version = "0.1.0"
description = "CLI tool for practising structured analytical reasoning"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui = ["streamlit>=1.30"]
ai = ["google-genai>=1.0"]

[project.scripts]
case-study = "case_study.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
